# python-how-do-i

./: .dockerignore  .editorconfig  .gitignore  pyproject.toml  readme.adoc
.github/issue_template/: bug_report.yml
bench/: run.sh
bench/bench_discover_unique_keys_from_a_list_of_dicts/: method_1.py  method_2.py
bench/bench_find_unique_keys_from_list_of_dicts/: setup.py
bench/dict/bench_find_unique_keys_from_list_of_dicts/: method_0.py  run.sh
bench/str/bench_find_substring_in_list_of_strings/: setup.py
bench/str_ops/: bench_find_substring_in_list_of_strings.py
bench/string/find_substring_in_list_of_strings/: run.sh
benchmark/find_substring_in_list_of_strings/: method_0.py  method_1a.py  method_2.py  method_3.py  method_4.py  setup.py
docker/: compose.yaml  dockerfile
docs/: contributing.md  security.md  support.md
src/: __init__.py  check_if_two_circles_intersect.py  check_if_two_circles_intersect_overlap_or_encompass.py  discover_the_intersection_of_two_lists_of_tuples.py  find_substring_in_list_of_strings.py
src/dict/: __init__.py  find_unique_keys_from_list_of_dicts.py
src/python/: find_substring_in_list_of_strings.py  pyproject.toml  utils.py
src/python/test/: test_find_substring_in_list_of_strings.py
src/str/: __init__.py
src/str_ops/: find_substring_in_list_of_strings.py
src/string/: find_substring_in_list_of_strings.py
templates/: test.py
test/: test_check_if_a_substring_is_in_a_list_of_strings.py  test_discover_the_intersection_of_two_lists_of_tuples.py  test_discover_unique_keys_from_a_list_of_dicts.py  test_find_substring_in_list_of_strings.py  test_find_unique_keys_from_list_of_dicts.py
test/dict/: test_find_unique_keys_from_list_of_dicts.py
test/str/: test_find_substring_in_list_of_strings.py
test/str_ops/: test_find_substring_in_list_of_strings.py
test/string/: test_find_substring_in_list_of_strings.py
test/test_dict/: test_find_unique_keys_from_list_of_dicts.py
test/test_string/: test_find_substring_in_list_of_strings.py
utils/: __init__.py  context_handler_kill_protection.py  kill_protect.py  persistent_dict.py  pertinacious_dict.py  print_helpers.py  tenacious_dict.py  test.py  test.td  tinacious_dict.py
(+2 files in other folders)
