[tool.poetry]
name = "how-do-i"
version = "0.1.0"
description = "How do I perform <common_task>?"
authors = ["Jerod Gawne <Jerod.Gawne@intusurg.com>"]
license = "SSPL"

[tool.poetry.dependencies]
python = "^3.10"
humanize = "^4.3.0"
Faker = "^14.1.0"
fastero = "^0.2.5"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-runner = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
