[tool.poetry]
name = "how-do-i"
version = "0.1.0"
description = "How do I perform <common_task>?"
authors = ["Jerod Gawne <me@jerodg.dev>"]
license = "SSPL"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-cov = "^3.0.0"
pytest-runner = "^6.0.0"
Faker = "^14.1.0"  # Test Data Creation
fastero = "^0.2.5"  # Benchmarking
black = { extras = ["d"], version = "^22.8.0" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 110
target-version = ['py38', 'py39', 'py310', 'py311']
