[tool.poetry]
name = "how-do-i"
version = "0.1.0"
description = "How do I perform <common_task>?"
authors = ["Jerod Gawne <Jerod.Gawne@intusurg.com>"]
license = "SSPL"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
